<resources>
    <string name="app_name">Bitcoin Converter</string>
    <string name="action_settings">Settings</string>
    <string name="get_name">Enter Name</string>
    <string name="welcome">Welcome!</string>
    <string name="choose">Choose Currency</string>
    <string name="submit">Submit</string>
    <string name="convert">Convert</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="currency">Currency</string>
</resources>
