<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = "com.project.bitcoinconverter.MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/top_margin"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/get_name"
        android:inputType="text"
        android:textSize="35dp" />


    <Button
        android:id="@+id/submitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/submit"
        android:background="@color/colorPrimaryLight"/>

</RelativeLayout>